[package]
name = "parser"
version = "0.1.0"
authors = ["Ashkan Kiani <ashkan.k.kiani@gmail.com>"]
edition = "2018"

[dependencies]
matches = "0.1.8"
buffered-reader = { version = "0.9.0", features = [] }
derive_more = "0.14.0"
log = "0.4.7"

[dev-dependencies]
jemallocator = "0.3.2"
env_logger = "0.6.2"
