[package]
name = "parser"
version = "0.1.0"
authors = ["Ashkan Kiani <ashkan.k.kiani@gmail.com>"]
edition = "2018"

[dependencies]
matches = "0.1.8"
derive_more = "0.14.0"
log = "0.4.7"
derive_deref = "1.1.0"
section = { path = "../section" }

[dev-dependencies]
env_logger = "0.6.2"
json = "0.11.14"
koption_macros = "0.1.1"
kargs = "0.1"

[profile.release]
lto = true
codegen-units = 1
